Actually fixed the arrow overlap problem
Added to .voting margin-left: 5px;

--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -2,6 +2,7 @@
 .blog {
   .voting {
     margin-right: 10px;
+    margin-left: 5px;
     width: 20px;
     float: left;
     text-align: center;
